@@ -436,16 +436,10 @@ class InstallRemovePane(gtk.VBox):
                 return is_right_category and ( inside(self.filter_RE, obj.__doc__) or inside(self.filter_RE, obj.detail) )
 
     def __pixbuf_cell_data_func(self, column, cell, model, iter):
-        import os
         class0 = model.get_value ( iter, 0 )
         if not hasattr(class0, 'logo_pixbuf'):
-            class_name = class0.__class__.__name__
-            for dir in [Config.get_config_dir(), 'other_icons/', 'appicons/', ]:
-                path = D + dir + class_name + '.png'
-                if os.path.exists(path): break
-            else:
-                path = D + 'other_icons/blank.png'
-                # print 'Warning: class %s has not any logo.' % class_name
+            path = D + 'other_icons/blank.png'
+            # print 'Warning: class %s has not any logo.' % class_name
             class0.logo_pixbuf = get_pixbuf(path, 24, 24)
         cell.set_property('pixbuf', class0.logo_pixbuf)
 
